# QuickMiner

./: CMakeLists.txt  QuickMinerSimulaotrTest.cpp  QuickMinerTest.cpp  README.md
LRUCache/: LRUCache.cpp  LRUCache.h
Miner/: CMakeLists.txt  QuickMiner.cpp  QuickMiner.h  RuleCache.cpp  RuleCache.h  Suffix.cpp  Suffix.h  SuffixList.cpp  SuffixList.h
Simulator/: CMakeLists.txt  FileAccessLog.cpp  FileAccessLog.h  QuickMinerSimulator.cpp  QuickMinerSimulator.h  Simulator.cpp  Simulator.h
